# lord

./: .gitignore  CHANGELOG.md  Makefile  QWEN.md  README.md  TODO.txt  ambiente_scrap.ipynb  analise_planilha.ipynb  lord.kv  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  rohanrideout-1.0.txt  run.sh  setup.cfg  test_decks.py  test_model.py
lord/: __init__.py  bases.py  collections.py  concretas.py  database.py  efeitos.py  import_deck.py  jsonqueries.py  loader.py  main.py  packs.py  repository.py  scrap.py  settings.py  utils.py
lord/data/: cartas.xls  scenarios.json  scenarios_all.json
migrations/: 0001_create_table_card.py  0002_create_table_deck.py  0003_create_table_slot.py  0004_criar_campo_card.cost.py  0005_criar_tabela_game.py  0006_criar_tabela_scenariocard.py  0007_card.cost_eh_nulo.py  0008_criar_campo_victory_em_card.py  0009_criar_campo_quest_em_card.py
scripts/: lord-cli  play.py
tests/: test_concretas.py  test_decks.py  test_encontros.py  test_model.py  test_setups.py
