[tool.poetry]
name = "lord"
version = "0.2.0"
description = "Jogar Lord of the Rings: LGC no console interativo do Python"
authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
peewee = "^3.16.2"
xlrd = "^2.0.1"
rich = "^13.4.1"
pyjsonq = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
peewee-moves = "^2.1.0"
jupyterlab = "^4.3.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
