[tool.poetry]
name = "lord"
version = "0.3.0"
description = "Jogar Lord of the Rings: LGC no console interativo do Python"
authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
peewee = "^3.19.0"
xlrd = "^2.0.2"
rich = "^14.3.2"
pyjsonq = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
peewee-moves = "^2.1.0"
jupyterlab = "^4.5.4"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
